Upgraded to Java 17 and OTM-DE-Compiler 5.0-SNAPSHOT